--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: go
 go: 1.7.4
-install:
-  - go get github.com/Masterminds/glide
-  - glide install
-script: go test -cover `glide nv`
+install: make setup
+script:
+  - make ci
 after_success:
-  test -n "$TRAVIS_TAG" && go get github.com/goreleaser/goreleaser && goreleaser
+  - git status
+  - test -n "$TRAVIS_TAG" && go run main.go
 notifications:
   email: false
