--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ script:
   - make ci
 after_success:
   - git status
-  - test -n "$TRAVIS_TAG" && go run main.go
+  - test -n "$TRAVIS_TAG" && go get github.com/goreleaser/goreleaser && goreleaser
 notifications:
   email: false
