Revert "travis clean"
This reverts commit 97d2845d51ed12803bc2ec79aa35c35174365cb4.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ install: make setup
 script:
   - make ci
 after_success:
+  - git status
   - test -n "$TRAVIS_TAG" && go get github.com/goreleaser/goreleaser && goreleaser
 notifications:
   email: false
