--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: go
-go: 1.7.4
+go: 1.8
 install: make setup
 script:
   - make ci
 after_success:
   - git status
-  - test -n "$TRAVIS_TAG" && go get github.com/goreleaser/goreleaser && goreleaser
+  - test -n "$TRAVIS_TAG" && curl -sL http://git.io/goreleaser | bash
 notifications:
   email: false
