--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,13 @@
 {
     "dependencies": {
+        "github.com/aws/aws-sdk-go": {
+            "version": "^1.8.11"
+        },
         "github.com/caarlos0/spin": {
             "branch": "master"
+        },
+        "github.com/urfave/cli": {
+            "version": "^1.19.1"
         }
     }
 }
