--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
             "version": "^1.8.11"
         },
         "github.com/caarlos0/spin": {
-            "branch": "master"
+            "version": "^1.0.0"
         },
         "github.com/urfave/cli": {
             "version": "^1.19.1"
